商品コメント追加機能の実装

--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -2,3 +2,12 @@
     /* 改行して表示 */
     white-space: pre-wrap;
 }
+
+.item-comment__button {
+    background: none;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
