--- a/src/public/css/address.css
+++ b/src/public/css/address.css
@@ -1,10 +1,14 @@
-.profile__content {
-    margin: 0 auto;
-    padding: 40px 15px;
-    min-height: 90vh;
+.header-utilities {
+    display: none;
 }
 
-.profile-form__heading {
+.address__content {
+    margin: 0 auto;
+    padding: 30px 15px;
+    height: 90vh;
+}
+
+.address-form__heading {
     text-align: center;
     font-size: 36px;
     margin: 0;
@@ -12,7 +16,7 @@
 
 .form {
     margin: 0 auto;
-    padding: 20px 100px;
+    padding: 30px 100px;
     width: 100%;
     text-align: center;
 }
@@ -20,38 +24,6 @@
 .form__group {
     margin: 40px auto;
     width: 680px;
-}
-
-.form__group-content--img {
-    display: flex;
-    align-items: center;
-}
-
-.form__img--prv {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.form__input {
-    margin-left: 30px;
-}
-
-.form__input--label {
-    padding: 10px 20px;
-    width: 225px;
-    height: 60px;
-    border: 2px solid #FF5555;
-    background: transparent;
-    color: #FF5555;
-    cursor: pointer;
-    font-size: 26px;
-    border-radius: 10px;
-}
-
-.form__input--file {
-    display: none;
 }
 
 .form__group-title {
