--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -1,12 +1,193 @@
+.header-utilities {
+    display: none;
+}
+
+.sell__content {
+    margin: 0 auto;
+    padding: 50px 15px;
+    min-height: 90vh;
+}
+
+.sell-form__heading {
+    text-align: center;
+    font-size: 36px;
+    margin: 0;
+}
+
+.form {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+}
+
+.form__group--img {
+    margin: 40px auto 80px;
+    width: 680px;
+}
+
+.form__group-item {
+    margin-top: 30px;
+}
+
+.form__group-title {
+    text-align: left;
+}
+
+.form__label--item {
+    text-align: left;
+    font-size: 24px;
+}
+
+.form__group-content--img {
+    width: 100%;
+    height: 150px;
+    border: 1px dashed #5F5F5F;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
 .form__img {
     width: 150px;
     height: 150px;
+    position: absolute;
+    left: 0;
+    display: none;
+    /* デフォルトで非表示に */
 }
 
 .form__img--prv {
     width: 100%;
+    object-fit: cover;
+}
+
+.form__input--label {
+    padding: 10px 20px;
+    width: 165px;
+    height: 43px;
+    border: 2px solid #FF5555;
+    background: transparent;
+    color: #FF5555;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 10px;
 }
 
 .form__input--file {
     display: none;
+}
+
+.form__group {
+    margin: 80px auto;
+    width: 680px;
+}
+
+.form__group-heading {
+    font-size: 30px;
+    color: #5F5F5F;
+    text-align: left;
+    border-bottom: 1px solid #5F5F5F;
+    margin: 0;
+    padding-bottom: 5px;
+}
+
+.form__group-item--category {
+    height: 84px;
+    margin-top: 30px;
+}
+
+.form__group-content--category {
+    margin-top: -10px;
+}
+
+/* ドロップダウンボックス全体の親コンテナ */
+.ms-parent {
+    width: 680px !important;
+    position: relative;
+    /* 親要素として相対位置を設定 */
+}
+
+/* ドロップダウンボックス本体 */
+.ms-choice {
+    padding: 15px !important;
+    width: 100% !important;
+    /* 親要素に合わせる */
+    height: 45px !important;
+    border: 1px solid #5F5F5F !important;
+    font-size: 24px !important;
+    border-radius: 4px !important;
+    position: absolute;
+    /* 親要素に対して絶対位置 */
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    /* padding を含めて幅を計算 */
+}
+
+.ms-choice span {
+    padding: 10px 15px !important;
+}
+
+.ms-drop ul {
+    text-align: left !important;
+    font-size: 24px !important;
+}
+
+.ms-drop input {
+    width: 25px !important;
+    height: 25px !important;
+}
+
+.ms-drop span {
+    margin-left: 10px !important;
+}
+
+.form__group-content {
+    margin-top: 5px;
+}
+
+/* .form__error {
+    height: 20px;
+    color: #ff0000;
+    text-align: left;
+    margin: 0 auto;
+} */
+
+.form__input--text input {
+    padding: 15px;
+    width: 100%;
+    height: 45px;
+    border: 1px solid #5F5F5F;
+    font-size: 24px;
+    appearance: none;
+    border-radius: 4px;
+    background: transparent;
+}
+
+.form__textarea textarea {
+    padding: 15px;
+    width: 100%;
+    height: 125px;
+    border: 1px solid #5F5F5F;
+    border-radius: 4px;
+    font-size: 24px;
+}
+
+.form__button {
+    margin: 90px auto 0;
+    width: 680px;
+}
+
+.form__button-submit {
+    padding: 10px 40px;
+    width: 100%;
+    height: 60px;
+    border: none;
+    background: #FF5555;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 26px;
+    border-radius: 5px;
 }
