--- a/src/public/css/comment.css
+++ b/src/public/css/comment.css
@@ -1,6 +1,6 @@
 .comment__content {
     margin: 0 auto;
-    padding: 100px 15px;
+    padding: 100px 30px;
     min-height: 90vh;
 }
 
@@ -10,8 +10,9 @@
 }
 
 .item__img--section {
-    width: 451px;
-    height: 548px;
+    width: 50%;
+    max-width: 451px;
+    /* height: 548px; */
 }
 
 .item__img {
@@ -19,6 +20,8 @@
 }
 
 .item-comment__content {
+    width: 50%;
+    max-width: 461px;
     margin-left: 100px;
 }
 
@@ -93,7 +96,8 @@
 }
 
 .comment__text {
-    width: 461px;
+    max-width: 461px;
+    width: 100%;
     border: 1px solid #5F5F5F;
     border-radius: 4px;
     font-size: 20px;
@@ -112,7 +116,8 @@
 }
 
 .form__textarea textarea {
-    width: 460px;
+    max-width: 460px;
+    width: 100%;
     height: 155px;
     border: 1px solid #5F5F5F;
     border-radius: 4px;
@@ -122,7 +127,8 @@
 
 .form__button-submit {
     padding: 5px 40px;
-    width: 452px;
+    max-width: 452px;
+    width: 100%;
     height: 57px;
     border: none;
     background: #FF5555;
@@ -131,4 +137,72 @@
     font-size: 30px;
     border-radius: 4px;
     margin-top: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .comment__content {
+        padding: 50px 20px;
+    }
+
+    .comment__section {
+        display: block;
+        width: 400px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .item__img--section {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .item-comment__content {
+        margin: 40px auto 0;
+        width: 100%;
+    }
+
+    .item__ttl {
+        font-size: 40px;
+    }
+
+    .item__brand {
+        font-size: 20px;
+    }
+
+    .item__price--content {
+        font-size: 30px;
+    }
+
+    .comment__group {
+        margin-top: 60px;
+    }
+
+    .comment__user-name {
+        font-size: 18px;
+    }
+
+    .comment__text {
+        font-size: 18px;
+        padding: 10px;
+    }
+
+    .form__label {
+        font-size: 18px;
+    }
+
+    .comment__form {
+        margin-top: 60px;
+    }
+
+    .form__textarea textarea {
+        height: 140px;
+        font-size: 18px;
+        padding: 15px 10px;
+    }
+
+    .form__button-submit {
+        padding: 5px 10px;
+        height: 45px;
+        font-size: 24px;
+    }
 }
