--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,7 +1,10 @@
 .header__inner {
     margin: 0 auto;
-    height: 10vh;
+    /* height: 10vh; */
+    min-height: 9vh;
     background: #000000;
+    display: flex;
+    align-items: center;
 }
 
 .header-utilities {
@@ -10,39 +13,51 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 39px;
+    flex-wrap: wrap;
+    padding: 10px 39px;
 }
 
 .header__logo {
-    width: 370px;
+    max-width: 370px;
     height: 36px;
+    margin: 5px 0;
 }
 
 .header__logo--img {
     width: 100%;
+    height: 100%;
+}
+
+.search-form {
+    max-width: 500px;
+    min-width: 300px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin: 5px 15px;
 }
 
 .search-form__item-input {
-    padding: 25px;
-    width: 500px;
+    padding: 20px;
+    width: 100%;
     height: 50px;
     border: none;
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 22px;
 }
 
 .header-nav__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 24px;
+    font-size: 22px;
+    margin: 5px 0;
 }
 
 .header-nav__button {
     color: #FFFFFF;
     border: none;
     background: transparent;
-    font-size: 24px;
+    font-size: 22px;
     cursor: pointer;
     margin-right: 30px;
 }
@@ -52,7 +67,98 @@
     background: #FFFFFF;
     border: none;
     border-radius: 4px;
-    font-size: 24px;
+    font-size: 22px;
     cursor: pointer;
     padding: 0 25px;
+}
+
+@media screen and (max-width: 768px) {
+    .header-utilities {
+        display: block;
+        padding: 10px 20px 20px;
+    }
+
+    .header__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 5px;
+    }
+
+    .header__logo {
+        max-width: 300px;
+        min-width: 220px;
+        margin-right: 5px;
+    }
+
+    .search-form {
+        max-width: 300px;
+        min-width: 250px;
+        margin: 5px 0;
+    }
+
+    .search-form__item-input {
+        padding: 15px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    #btn {
+        /* position: fixed; */
+        /* top: 10px;
+        right: 25px; */
+        width: 44px;
+        height: 44px;
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    #btn span {
+        display: block;
+        background-color: #FFFFFF;
+        width: 36px;
+        height: 2px;
+        transition: all 0.5s ease;
+    }
+
+    #btn.on span:nth-of-type(1) {
+        transform: translateY(11px) rotate(45deg);
+    }
+
+    #btn.on span:nth-of-type(2) {
+        transform: scale(0);
+    }
+
+    #btn.on span:nth-of-type(3) {
+        transform: translateY(-12px) rotate(-45deg);
+    }
+
+    .header-nav__list {
+        flex-direction: column;
+        justify-content: space-around;
+        transition: all 0.5s ease;
+        width: 100%;
+        height: 100vh;
+        top: -10000px;
+        left: 0;
+        background: #000000;
+        position: fixed;
+        margin: 0;
+    }
+
+    .header-nav__list.on {
+        top: 0;
+    }
+
+    .header-nav__form {
+        margin: 0;
+    }
+
+    .header-nav__button {
+        margin: 15px auto;
+    }
 }
