--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -1,25 +1,42 @@
 .item-detail__content {
     margin: 0 auto;
-    padding: 100px 15px;
+    padding: 100px 30px;
     min-height: 90vh;
 }
 
 .item-detail__section {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .item__img--section {
-    width: 451px;
-    height: 548px;
+    max-width: 451px;
+    width: 42%;
+    max-height: 451px;
+    height: 42%;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-right: 50px;
 }
 
+/* .search-form {
+    max-width: 500px;
+    min-width: 300px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin: 5px 15px;
+} */
 .item__img {
     width: 100%;
 }
 
 .item__content {
-    margin-left: 100px;
+    width: 42%;
+    max-width: 452px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-left: 50px;
 }
 
 .item__ttl {
@@ -74,7 +91,7 @@
 
 .item-purchase__button {
     padding: 5px 40px;
-    width: 452px;
+    width: 100%;
     height: 57px;
     border: none;
     background: #FF5555;
@@ -113,22 +130,104 @@
 .item__category--header,
 .item__condition--header {
     font-size: 24px;
-    margin: 0;
+    margin: 0 50px 0 0;
+    width: 120px;
+    flex-shrink: 0;
 }
 
 .item__category--content {
-    width: 150px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item__category--item {
+    /* width: 150px; */
     height: 35px;
     background: #D9D9D9;
     border-radius: 15px;
     font-size: 20px;
     display: flex;
     justify-content: center;
-    padding: 3px;
-    margin: 0 0 0 30px;
+    padding: 3px 20px;
+    /* margin: 0 30px 20px 0; */
+    margin: 10px 30px 10px 0;
 }
 
 .item__condition--content {
     font-size: 20px;
-    margin: 0 50px;
+    margin: 0 30px;
+}
+
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    .item-detail__content {
+        padding: 50px 20px;
+    }
+
+    .item-detail__section {
+        display: block;
+    }
+
+    .item__img--section {
+        width: 300px;
+        max-width: 100%;
+        margin: 0 auto 50px;
+    }
+
+    .item__content {
+        width: 400px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .item__ttl {
+        font-size: 40px;
+    }
+
+    .item__brand {
+        font-size: 20px;
+    }
+
+    .item__price--content {
+        font-size: 30px;
+    }
+
+    .item-purchase__form {
+        width: 100%;
+    }
+
+    .item-purchase__button {
+        padding: 2px 40px;
+        height: 45px;
+        font-size: 25px;
+    }
+
+    .item__explanation--header,
+    .item__information--header {
+        font-size: 30px;
+    }
+
+    .item__explanation--content {
+        font-size: 20px;
+    }
+
+    .item__category {
+        display: block;
+    }
+
+    .item__category--header,
+    .item__condition--header {
+        font-size: 20px;
+        margin: 0 20px 0 0;
+    }
+
+    .item__category--item {
+        height: 30px;
+        font-size: 16px;
+        margin: 10px 10px 0 0;
+    }
+
+    .item__condition--content {
+        font-size: 16px;
+    }
 }
