--- a/src/public/css/payment.css
+++ b/src/public/css/payment.css
@@ -4,7 +4,7 @@
 
 .payment__content {
     margin: 0 auto;
-    padding: 30px 15px;
+    padding: 30px 20px;
     height: 90vh;
 }
 
@@ -16,7 +16,7 @@
 
 .form {
     margin: 0 auto;
-    padding: 30px 100px;
+    padding: 30px 0;
     width: 100%;
     text-align: center;
 }
@@ -47,4 +47,32 @@
     font-size: 26px;
     border-radius: 5px;
     margin-top: 60px;
+}
+
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    .payment-form__heading {
+        font-size: 30px;
+    }
+
+    .form {
+        width: 400px;
+        max-width: 100%;
+    }
+
+    .form__item--select {
+        width: 100%;
+        height: 40px;
+        font-size: 20px;
+    }
+
+    .form__button {
+        width: 100%;
+    }
+
+    .form__button-submit {
+        padding: 5px 40px;
+        height: 45px;
+        font-size: 22px;
+    }
 }
