--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -1,7 +1,7 @@
 .purchase__content {
     margin: 0 auto;
-    padding: 70px 15px;
-    height: 90vh;
+    padding: 70px 30px;
+    min-height: 90vh;
 }
 
 .purchase__section {
@@ -10,7 +10,10 @@
 }
 
 .purchase__information {
-    width: 650px;
+    max-width: 650px;
+    flex-shrink: 0;
+    flex-grow: 1;
+    /* width: 55%; */
 }
 
 .item__information {
@@ -18,7 +21,7 @@
     margin-top: 30px;
 }
 
-.item__img--section{
+.item__img--section {
     width: 121px;
     height: 147px;
     margin-right: 60px;
@@ -64,7 +67,11 @@
 
 .purchase__form {
     margin-left: 100px;
-    width: 440px;
+    max-width: 440px;
+    min-width: 300px;
+    width: 35%;
+    flex-shrink: 0;
+    flex-grow: 1;
 }
 
 .purchase-box {
@@ -80,6 +87,7 @@
 
 .purchase-box__header {
     width: 60%;
+    flex-shrink: 0;
 }
 
 .purchase-box__row--price {
@@ -97,4 +105,73 @@
     font-size: 30px;
     border-radius: 4px;
     margin-top: 70px;
+}
+
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    .purchase__content {
+        padding: 50px 20px;
+    }
+
+    .purchase__section {
+        display: block;
+        width: 400px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .purchase__information {
+        width: 100%;
+    }
+
+    .item__information {
+        margin-top: 0;
+    }
+
+    .item__img--section {
+        margin-right: 10px;
+    }
+
+    .item__ttl {
+        font-size: 26px;
+    }
+
+    .item__price--content {
+        font-size: 20px;
+    }
+
+    .purchase__form {
+        margin: 30px 0;
+        width: 100%;
+        min-width: auto;
+    }
+
+    .address-form {
+        margin-top: 20px;
+    }
+
+    .payment-form__ttl,
+    .address-form__ttl {
+        font-size: 20px;
+    }
+
+    .form__item-button {
+        font-size: 16px;
+    }
+
+    .purchase-box {
+        padding: 40px 20px 20px;
+    }
+
+    .purchase-box__row,
+    .purchase-box__row--price {
+        font-size: 16px;
+    }
+
+    .form__button-submit {
+        padding: 2px 40px;
+        height: 45px;
+        font-size: 25px;
+        margin-top: 30px;
+    }
 }
