--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -19,7 +19,7 @@
 
 .form {
     margin: 0 auto;
-    padding: 30px 100px;
+    padding: 30px 0;
     width: 100%;
     text-align: center;
 }
@@ -55,6 +55,7 @@
     color: #ff0000;
     text-align: left;
     margin: 0 auto;
+    font-size: 24px;
 }
 
 .form__button {
@@ -82,4 +83,55 @@
     color: #0073CC;
     text-decoration: none;
     font-size: 20px;
+}
+
+/* レスポンシブ */
+@media screen and (max-width: 768px) {
+    .register-form__heading {
+        font-size: 30px;
+        margin: 0 0 30px;
+    }
+
+    .form {
+        padding: 0;
+        width: 400px;
+        max-width: 100%;
+    }
+
+    .form__group {
+        margin: 15px auto;
+        width: 100%;
+    }
+
+    .form__label--item {
+        font-size: 20px;
+    }
+
+    .form__input--text input {
+        height: 40px;
+        font-size: 20px;
+    }
+
+    .form__error {
+        font-size: 16px;
+    }
+
+    .form__button {
+        margin: 35px auto 0;
+        width: 100%;
+    }
+
+    .form__button-submit {
+        padding: 5px 40px;
+        height: 40px;
+        font-size: 20px;
+    }
+
+    .login__button {
+        margin-top: 15px;
+    }
+
+    .login__button-link {
+        font-size: 16px;
+    }
 }
