--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -191,3 +191,126 @@
     font-size: 26px;
     border-radius: 5px;
 }
+
+@media screen and (max-width: 768px) {
+    .sell__content {
+        padding: 40px 15px;
+    }
+
+    .sell-form__heading {
+        font-size: 30px;
+    }
+
+    .form {
+        width: 400px;
+        max-width: 100%;
+    }
+
+    .form__group--img {
+        margin: 30px auto 60px;
+        width: 100%;
+    }
+
+    .form__group-item {
+        margin-top: 20px;
+    }
+
+    .form__label--item {
+        font-size: 20px;
+    }
+
+    .form__img {
+        width: auto;
+        max-width: 150px;
+        height: auto;
+        position: static;
+        margin-right: 5px;
+    }
+
+    .form__input {
+        width: auto;
+        min-width: 145px;
+        /* flex-grow: 1; */
+        flex-shrink: 0;
+    }
+
+        /* .item__img--section {
+            max-width: 451px;
+            width: 42%;
+            max-height: 451px;
+            height: 42%;
+            flex-grow: 1;
+            flex-shrink: 0;
+            margin-right: 50px;
+        } */
+    .form__input--label {
+        padding: 8px 18px;
+        font-size: 14px;
+    }
+
+    .form__group {
+        margin: 50px auto;
+        width: 100%;
+    }
+
+    .form__group-heading {
+        font-size: 26px;
+        padding-bottom: 3px;
+    }
+
+    .form__group-item--category {
+        height: 74px;
+        margin-top: 20px;
+    }
+
+    .form__group-content--category {
+        margin-top: -13px;
+    }
+
+    /* ドロップダウンボックス全体の親コンテナ */
+    .ms-parent {
+        width: 100% !important;
+    }
+
+    /* ドロップダウンボックス本体 */
+    .ms-choice {
+        padding: 10px !important;
+        /* 親要素に合わせる */
+        height: 40px !important;
+        font-size: 20px !important;
+    }
+
+    .ms-choice span {
+        padding: 7px 10px !important;
+    }
+
+    .ms-drop ul {
+        font-size: 20px !important;
+    }
+
+    .form__group-content {
+        margin-top: 2px;
+    }
+
+    .form__input--text input {
+        padding: 10px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    .form__textarea textarea {
+        padding: 10px;
+        font-size: 18px;
+    }
+
+    .form__button {
+        margin: 70px auto 0;
+        width: 100%;
+    }
+
+    .form__button-submit {
+        padding: 5px 40px;
+        height: 45px;
+        font-size: 20px;
+    }
+}
